# kyouth-data-ai

week_1/: README.md  main.py  pyproject.toml
week_1/src/: ingestor.py  loader.py  processor.py  profiler.py
week_2/: .gitignore  README.md  find_skill_gaps.py  prompt_model.py  pyproject.toml  rate_limits.txt  tag_data.py  test_rate_limit.py
week_3/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
week_3/backend/: .dockerignore  Dockerfile  pyproject.toml
week_3/backend/src/: main.py
week_3/backend/src/week_2/: .env.example  prompt_model.py
week_3/frontend/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
week_3/frontend/src/: main.py  main_day1.py
week_3/frontend/src/static/: script.js
week_3/frontend/src/templates/: chat_page.html  index.html
