[project]
name = "week_1"
version = "0.1.0"
description = "ETL Pipeline"
readme = "README.md"
requires-python = "==3.14.0"
dependencies = [
    "beautifulsoup4==4.12.3",
    "pydantic==1.10.18",  
]

[project.optional-dependencies]
dev = ["ruff==0.15.0"]

[dependency-groups]
dev = ["ruff==0.15.0"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
