[project]
name = "backend"
version = "0.1.0"
description = "Backend API for Resume Helper Chatbot"
readme = "README.md"
requires-python = "==3.14.5"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "ruff==0.15.14",
]

[tool.uv]
required-version = "==0.8.0"

[tool.ruff]
line-length = 88
