[project]
name = "frontend"
version = "0.1.0"
description = "Frontend chat interface for LLM application"
readme = "README.md"
requires-python = "==3.14.5"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "ruff==0.15.14",
    "jinja2>=3.1.6",
]

[tool.uv]
required-version = "==0.8.0"

[tool.ruff]
line-length = 88
